@@ -186,8 +186,9 @@ the patch.
 =item *
 
 Several improvements have been contributed to B<pullnews> by Geraint
-Edwards:  the B<-m> flag now permits to remove headers matching (or not)
-a given regexp, and B<rnews> reporting is improved.
+Edwards:  the new B<-B> flag triggers header-only feeding, the B<-m>
+flag now permits to remove headers matching (or not) a given regexp,
+and B<rnews> reporting is improved.
 
 =back
 
